Fixed sidebar refreshing and word wrapping

--- a/packages/react-frontend/src/Components/Sidebar.css
+++ b/packages/react-frontend/src/Components/Sidebar.css
@@ -67,6 +67,10 @@
   flex-direction: column;
 }
 
+.contact-details p {
+  word-wrap: break-word;
+}
+
 .contact-details-top {
   display: flex;
   flex-direction: row;
